full/with-deployment/030-Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app
  template:
    metadata:
      labels:
        app: html-openshift-app
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      volumes:
      - name: html-openshift-app
        persistentVolumeClaim:
          claimName: html-openshift-app
      containers:
      - name: html-openshift-app
        image: ghcr.io/im24a-mendolag/html-openshift-app:v1
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: '2'
            memory: 200Mi
          requests:
            cpu: '1'
            memory: 100Mi
        volumeMounts:
        - name: html-openshift-app
          mountPath: /tmp
        imagePullPolicy: Always
